media-query tweaks, corner triangles on artist/project pages

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -96,6 +96,7 @@ strong {
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: start;
+    grid-gap: 35px;
 
     section {
         justify-self: stretch;
