--- a/layouts/partials/artist_listings.html
+++ b/layouts/partials/artist_listings.html
@@ -25,11 +25,13 @@
                 <h1 class="subhead_date ">{{$season}} {{$year}}</h1>
 
                 {{ range sort (where .Pages "Type" "artists") ".Params.name" }}
+                
                         <section class="list_block artist-listing">
                                 <h2 class="artist-name"><a href="{{.URL}}">{{.Params.name}}</h2></a>
                                 <img class="artist-pic" src={{.Params.picture}}>
                                 <p class="artist-project-summary">{{.Summary | truncate 200 }}</p>
                                 <a class="preview_link-more" href="{{.URL}}">more</a>
+                                <div class="triangle triangle-corner"></div>
                         </section>
                 {{end}}
 
