--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -69,11 +69,6 @@
                 margin-top: -20px;
             }
         }
-        .preview_link-more {
-            float: none;
-            display: inline-block;
-            margin: 20px 0 0 0;
-        }
     }
     
     .volunteer {
@@ -103,6 +98,10 @@
         left: 80%;
     }
 
+    .residency_menu {
+        padding-left: 35px;
+    }
+
     .residency_menu_container ul {
         margin: 5px 0 0 0;
     }
@@ -114,6 +113,15 @@
     }
 }
 
+@media (max-width: 900px) {
+    .page-container {
+        padding: 20px 30px 20px 20px;
+    }
+    .grid {
+        grid-gap: 20px;
+    }
+}
+
 @media (max-width: 700px) {
     .list_block, .list_intro {
         min-width: 100%;
@@ -121,6 +129,12 @@
     .block_date-filter {
         padding-bottom: 30px;
     }
+    .page-copy {
+        .triangle-corner {
+            border-width: 0 175px 60px 0;
+        }
+    }
+
 }
 
 @media (max-width: 600px) {
@@ -131,4 +145,5 @@
             bottom: 0;
         }
     }
+
 }
