--- a/assets/sass/pages/_residency.scss
+++ b/assets/sass/pages/_residency.scss
@@ -1,7 +1,7 @@
 .grid--residency {
     grid-template-columns: 60% auto;
     grid-template-rows: auto 265px auto;
-    grid-gap: 35px;
+    // grid-gap: 35px;
     grid-template-areas:
         "header header"
         "primary sidebar"
