--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -3,7 +3,7 @@
 .grid--single {
     grid-template-columns: 60% auto;
     grid-template-rows: auto;
-    grid-gap: 35px;
+    // grid-gap: 35px;
     grid-template-areas:
         "header header"
         "primary sidebar";
@@ -88,6 +88,12 @@
     position: absolute;
     top: 0;
     right: 0;
+}
+
+.list_block {
+    .triangle-corner {
+        border-width: 0 90px 31px 0;
+    }
 }
 
 .link_back {
