--- a/assets/sass/pages/single.scss
+++ b/assets/sass/pages/single.scss
@@ -3,7 +3,7 @@
 .grid--single {
     grid-template-columns: 60% auto;
     grid-template-rows: auto;
-    grid-gap: 35px;
+    // grid-gap: 35px;
     grid-template-areas:
         "header header"
         "primary sidebar";
