mobile nav styling

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,5 +1,11 @@
-$darkblue: #004B80;
-$lightblue: #7C95BF;
-$orange: #E6AC5C;
+// $darkblue: #004B80;
+// $lightblue: #7C95BF;
+// $orange: #E6AC5C;
+// $beige: #F7F5F0;
+// $taupe: #A3A09C;
+
+$darkblue: #048;
+$lightblue: #79B;
+$orange: #EA5;
 $beige: #F7F5F0;
-$taupe: #A3A09C;
+$taupe: #AA9;
