--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
         {{ partial "to-top" .}}
         
         <script src="/js/scrollToTop.js" async defer></script>
+        <script src="/js/mobileNav.js" async defer></script>
         <script src="/js/dateFilter.js" async defer></script>
 </body>
 
