--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -20,23 +20,19 @@
 }
 
 @media (max-width: 1100px) {
-    /* GO TO DIFFERENT NAV LAYOUT HERE */
-    // .header_nav_menu-item {
-    //     border: solid 1px orange;
-    // }
-
     .page-container--home {
         .grid--home {
             grid-template-areas:
-            "header sidebar"
-            "primary sidebar"
-            "info info";
+                "header sidebar"
+                "primary sidebar"
+                "info info";
         }
-    }    
+    }
+
     .projects_project-title {
         font-size: 18px;
     }
-    
+
     .projects_preview_date {
         margin: 5px 0;
     }
@@ -58,6 +54,7 @@
                 "primary"
                 "sidebar";
         }
+
         .grid--residency {
             grid-template-columns: auto;
             grid-template-areas:
@@ -65,17 +62,19 @@
                 "sidebar"
                 "primary"
                 "image";
+
             .page-copy {
                 margin-top: -20px;
             }
         }
     }
-    
+
     .volunteer {
         .contribute-info {
             display: inline-block;
             width: 50%;
         }
+
         .image--volunteer {
             display: inline-block;
             width: 40%;
@@ -105,6 +104,7 @@
     .residency_menu_container ul {
         margin: 5px 0 0 0;
     }
+
     .page-container {
         .to-top {
             transform: scale(0.8);
@@ -113,22 +113,151 @@
     }
 }
 
+
+@media (max-width: 1050px) {
+
+    // same for non-home pages @ 750px
+    .grid--home {
+        .header_nav {
+            display: none;
+            top: 0;
+        }
+
+        .nav_mobile-placeholder {
+            display: block;
+        }
+
+        .header_nav_divider {
+            display: none;
+        }
+
+        .header_nav_menu-item {
+            display: block;
+            padding-top: 12px;
+        }
+
+        .triangle_drop-down {
+            transform: rotate(30deg);
+            box-shadow: 1px 1px 10px #000;
+        }
+
+        .nav_subnav {
+            padding-top: 5px;
+            left: 0;
+            height: 35px;
+            width: 260px;
+            padding-left: 125px;
+
+            &:hover {
+                z-index: 300;
+            }
+        }
+
+        .subnav_menu-item {
+            display: block;
+        }
+    }
+}
+
+
+
+@media (max-width: 1015px) {
+    .header_nav-logo-container {
+        background: linear-gradient(180deg, rgba(27, 31, 38, 0.7) 70px, rgba(27, 31, 38, 0));
+    }
+}
+
+
 @media (max-width: 900px) {
     .page-container {
         padding: 20px 30px 20px 20px;
     }
+
     .grid {
         grid-gap: 20px;
     }
 }
 
+
+@media (max-width: 750px) {
+
+    .grid--single, .grid--list, .grid--residency {
+        .header_nav {
+            display: none;
+            top: 0;
+        }
+
+        .nav_mobile-placeholder {
+            display: block;
+        }
+
+        .header_nav_divider {
+            display: none;
+        }
+
+        .header_nav_menu-item {
+            display: block;
+            padding-top: 12px;
+            text-shadow: 1px 1px 3px #000; 
+        }
+
+        .triangle_drop-down {
+            transform: rotate(30deg);
+            // box-shadow: 1px 1px 10px #000;
+        }
+
+        .nav_subnav {
+            padding-top: 5px;
+            left: 0;
+            height: 35px;
+            width: 260px;
+            padding-left: 125px;
+
+            &:hover {
+                z-index: 300;
+            }
+        }
+
+        .subnav_menu-item {
+            display: block;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 700px) {
-    .list_block, .list_intro {
+
+    .list_block,
+    .list_intro {
         min-width: 100%;
     }
+
     .block_date-filter {
         padding-bottom: 30px;
     }
+
     .page-copy {
         .triangle-corner {
             border-width: 0 175px 60px 0;
