--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -26,6 +26,12 @@
     font-weight: 600;
 }
 
+.grid--single, .grid--list, .grid--residency {
+    .header_nav {
+        margin-right: 200px;
+    }
+}
+
 .header_nav_menu-item {
     position: relative;
 
@@ -103,6 +109,27 @@
 }
 
 
+/* ===== MOBILE PLACEHOLDER ===== */
+.nav_mobile-placeholder {
+    height: 28px;
+    width: 100%;
+    margin-left: -10px;
+    padding-top: 5px;
+    background: linear-gradient(rgba(255,255,255, 0.6), #eee);
+    color: #222;
+    border-bottom: solid 1px #444;
+    opacity: 0.65;
+    font-weight: 700;
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    text-align: center;
+    display: none;
+    position: absolute;
+    top: 57px;
+}
+
+
+
 /* ===== TO-TOP ===== */
 
 .to-top {
@@ -126,6 +153,12 @@
         margin: -7px 0 0 15px;
     }
 }
+
+
+
+
+
+
 
 
 
