--- a/layouts/index.html
+++ b/layouts/index.html
@@ -85,6 +85,7 @@
     </div>
 
     <script src="/js/scrollToTop.js" async defer></script>
+    <script src="/js/mobileNav.js" async defer></script>
 </body>
 
 </html>
