--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -34,7 +34,8 @@
 
 .header_nav_menu-item {
     position: relative;
-
+    text-shadow: 1px 1px 3px #000;
+    
     a {
         color: #fff;
         text-decoration: none;
@@ -61,7 +62,7 @@
 
 .triangle_drop-down {
     border-width: 7px 4px 0 4px;
-    border-color: #aaa transparent transparent transparent;
+    border-color: #fff transparent transparent transparent;
     margin: 0 0 3px 10px;
 }
 
@@ -115,7 +116,8 @@
     width: 100%;
     margin-left: -10px;
     padding-top: 5px;
-    background: linear-gradient(rgba(255,255,255, 0.6), #eee);
+    // background: linear-gradient(rgba(255,255,255, 0.6), #eee);
+    background: #eee;
     color: #222;
     border-bottom: solid 1px #444;
     opacity: 0.65;
