--- a/assets/sass/pages/_support.scss
+++ b/assets/sass/pages/_support.scss
@@ -43,7 +43,8 @@
 
         .donate-amount, .dollar-sign {
             margin-top: 7px;
-            width: 100%;  
+            width: 250px;
+            max-width: 100%;   
             height: 40px;
             background: $taupe;
             color: #fff;
