home page mobile styling

--- a/layouts/contribute/list.html
+++ b/layouts/contribute/list.html
@@ -23,7 +23,7 @@
 
 </section>
 
-<section class="sidebar volunteer">    
+<section class="sidebar volunteer" id="volunteer">    
 
         {{range where .Pages ".Params.type" "volunteer"}} 
             <h1>{{.Title}}</h1>  
