--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -10,7 +10,7 @@
         <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
             <div class="subnav_menu-item"><a href="/contribute">contribute</a></div>
-            <div class="subnav_menu-item"><a href="/contribute">volunteer</a></div>
+            <div class="subnav_menu-item"><a href="/contribute/#volunteer">volunteer</a></div>
             <div class="subnav_menu-item"><a href="/supporters">our supporters</a></div>
         </div>
     </div>
