--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -7,7 +7,6 @@
             margin-right: calc(((100vw - 1500px) / 2) - 5px);
         }
     }
-
 }
 
 @media (max-width: 1300px) {
@@ -16,7 +15,6 @@
             margin-top: 30px;
         }
     }
-
 }
 
 @media (max-width: 1100px) {
@@ -115,7 +113,6 @@
 
 
 @media (max-width: 1050px) {
-
     // same for non-home pages @ 550px
     .grid--home {
         .header_nav {
@@ -205,13 +202,66 @@
         }
     }
 
+    .grid--home {
+        border: solid 1px magenta;
+        grid-template-columns: 100%;
+        grid-template-areas:
+            "header"
+            "primary"
+            "sidebar"
+            "info";
+
+        header {
+            width: 100%;
+            height: 260px;
+            overflow: hidden;
+            border: solid 1px lawngreen;
+        }
+
+        .page-copy {
+            border: solid 1px purple;
+            align-self: auto;
+            grid-area: primary;
+        }
+
+        .sidebar {
+            // ???? NOT WORKING ???
+            // grid-area: sidebar;
+            grid-area: primary;
+            border: solid 1px orange;
+        }
+
+        .org-info {
+            grid-area: info;
+        }
+
+
 }
+
 
 
 @media (max-width: 550px) {
 
     .header_nav-logo-container {
         padding-bottom: 5px;
+    }
+
+    .header_image-holder {
+        height: 260px;
+    }
+
+    .page-container {
+        width: 100%;
+        padding: 12px;
+        left: 0;
+    }
+
+    .list_block {
+        right: 5px;
+    }
+
+    .clear-button {
+        left: calc(100% - 90px);
     }
 
     .grid--single,
@@ -260,6 +310,8 @@
         display: none;
     }
 
+}
+
     .page-container {
         padding-bottom: 60px;
     }
@@ -270,6 +322,7 @@
         right: calc(50% - 100px);
     }
 }
+
 
 
 
