--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -202,37 +202,33 @@
         }
     }
 
+
+    .page-container--home .grid--home {
+    grid-template-columns: 100%;
+    grid-template-areas:
+        "header"
+        "primary"
+        "sidebar"
+        "info";
+    }
+
     .grid--home {
-        border: solid 1px magenta;
-        grid-template-columns: 100%;
-        grid-template-areas:
-            "header"
-            "primary"
-            "sidebar"
-            "info";
 
         header {
-            width: 100%;
             height: 260px;
             overflow: hidden;
-            border: solid 1px lawngreen;
         }
 
-        .page-copy {
-            border: solid 1px purple;
-            align-self: auto;
-            grid-area: primary;
+        .header_nav-logo-container {
+            width: 100%;
         }
 
         .sidebar {
-            // ???? NOT WORKING ???
-            // grid-area: sidebar;
-            grid-area: primary;
-            border: solid 1px orange;
+            margin-top: 0;
         }
 
-        .org-info {
-            grid-area: info;
+        .page-copy {
+            align-self: auto;
         }
 
 
