--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -105,7 +105,7 @@
     &:hover {
         background: rgba(70,70,85,0.9);
         border-bottom: solid 2px $darkblue;
-        color: #fab047;
+        color: $orange;
     }
 }
 
