remove mobile nav reveal button

--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -111,24 +111,23 @@
 
 
 /* ===== MOBILE PLACEHOLDER ===== */
-.nav_mobile-placeholder {
-    height: 28px;
-    width: 100%;
-    margin-left: -10px;
-    padding-top: 5px;
-    // background: linear-gradient(rgba(255,255,255, 0.6), #eee);
-    background: #eee;
-    color: #222;
-    border-bottom: solid 1px #444;
-    opacity: 0.65;
-    font-weight: 700;
-    font-size: 18px;
-    letter-spacing: 0.03em;
-    text-align: center;
-    display: none;
-    position: absolute;
-    top: 57px;
-}
+// .nav_mobile-placeholder {
+//     height: 28px;
+//     width: 100%;
+//     margin-left: -10px;
+//     padding-top: 5px;
+//     background: #eee;
+//     color: #222;
+//     border-bottom: solid 1px #444;
+//     opacity: 0.65;
+//     font-weight: 700;
+//     font-size: 18px;
+//     letter-spacing: 0.03em;
+//     text-align: center;
+//     display: none;
+//     position: absolute;
+//     top: 57px;
+// }
 
 
 
