--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,11 +20,15 @@
 
                 <div class="tagline">interactive, digital, performance art</div>
                 <div class="carousel-control">
-                    <div class="carousel-control_dot"></div>
-                    <div class="carousel-control_dot"></div>
-                    <div class="carousel-control_dot"></div>
-                    <div class="carousel-control_dot"></div>
-                    <div class="carousel-control_dot"></div>
+                    <div class="carousel_dots">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+                    <div class="carousel_arrow forward"> > </div>
+                    <div class="carousel_arrow back"> < </div>
                 </div>
             </header>
             
@@ -85,7 +89,7 @@
     </div>
 
     <script src="/js/scrollToTop.js" async defer></script>
-    <script src="/js/mobileNav.js" async defer></script>
+    <!-- <script src="/js/mobileNav.js" async defer></script> -->
 </body>
 
 </html>
