--- a/assets/sass/_media-queries.scss
+++ b/assets/sass/_media-queries.scss
@@ -79,6 +79,12 @@
             margin-left: 35px;
             vertical-align: top;
         }
+
+        .non-profit-info {
+            max-width: 700px;
+            text-align: center;
+            margin: 30px auto 16px auto;
+        }
     }
 
     section.list_intro {
@@ -117,13 +123,16 @@
     // same for non-home pages @ 550px
     .grid--home {
         .header_nav {
-            display: none;
-            top: 0;
+            // display: none;
+            // top: 0;
+            position: absolute;
+            top: 30px;
+            left: 12px;
         }
 
-        .nav_mobile-placeholder {
-            display: block;
-        }
+        // .nav_mobile-placeholder {
+        //     display: block;
+        // }
 
         .header_nav_divider {
             display: none;
@@ -178,6 +187,10 @@
 
 @media (max-width: 750px) {
 
+    .header_image-holder, .grid--home .header {
+        height: 275px;
+    }
+
     .grid--single,
     .grid--list,
     .grid--residency {
@@ -216,7 +229,7 @@
     .grid--home {
 
         header {
-            height: 260px;
+            height: 300px;
             overflow: hidden;
         }
 
@@ -228,80 +241,14 @@
             align-self: auto;
         }
 
+    }    
+
+    .grid {
+        padding-bottom: 50px;
     }
 
-
-
-    @media (max-width: 550px) {
-
-        .header_nav-logo-container {
-            padding-bottom: 5px;
-        }
-
-        .header_image-holder {
-            height: 260px;
-        }
-
-        .page-container {
-            width: 100%;
-            padding: 12px;
-            left: 0;
-        }
-
-        .list_block {
-            right: 5px;
-        }
-
-        .grid--single,
-        .grid--list,
-        .grid--residency {
-            .header_nav {
-                display: none;
-                top: 0;
-            }
-
-            .nav_mobile-placeholder {
-                display: block;
-            }
-
-            .header_nav_divider {
-                display: none;
-            }
-
-            .header_nav_menu-item {
-                display: block;
-                padding-top: 12px;
-            }
-
-            .triangle_drop-down {
-                transform: rotate(30deg);
-            }
-
-            .nav_subnav {
-                padding-top: 5px;
-                left: 0;
-                height: 35px;
-                width: 260px;
-                padding-left: 125px;
-
-                &:hover {
-                    z-index: 300;
-                }
-            }
-
-            .subnav_menu-item {
-                display: block;
-            }
-        }
-
-        .social-links .triangle {
-            display: none;
-        }
-
-    }
-
-    .page-container {
-        padding-bottom: 60px;
+    .sidebar {
+        padding-left: 10px;
     }
 
     .social-links {
@@ -310,30 +257,6 @@
         right: calc(50% - 100px);
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media (max-width: 700px) {
 
@@ -363,4 +286,95 @@
         }
     }
 
+}
+
+@media (max-width: 550px) {
+
+    .header_nav-logo-container {
+        padding-bottom: 5px;
+    }
+
+    .carousel_arrow {
+        font-size: 24px;
+        bottom: 33px;
+    }
+
+    .page-container {
+        width: 100%;
+        padding: 12px;
+        left: 0;
+    }
+
+    .list_block {
+        right: 5px;
+    }
+
+    .grid--single,
+    .grid--list,
+    .grid--residency {
+        .header_nav {
+            // display: none;
+            // top: 0;
+            position: absolute;
+            top: 30px;
+            left: 12px;
+        }
+
+        // .nav_mobile-placeholder {
+        //     display: block;
+        // }
+
+        .header_nav_divider {
+            display: none;
+        }
+
+        .header_nav_menu-item {
+            display: block;
+            padding-top: 12px;
+        }
+
+        .triangle_drop-down {
+            transform: rotate(30deg);
+        }
+
+        .nav_subnav {
+            padding-top: 5px;
+            left: 0;
+            height: 35px;
+            width: 260px;
+            padding-left: 125px;
+
+            &:hover {
+                z-index: 300;
+            }
+        }
+
+        .subnav_menu-item {
+            display: block;
+        }
+    }
+
+    .social-links .triangle {
+        display: none;
+    }
+
+}
+
+
+@media (max-width: 500px) {
+
+    .header_image-holder, .grid--home .header {
+        height: 230px;
+    }
+
+    .carousel-control {
+        display: none;
+    }
+
+
+    .page-copy {
+        .triangle-corner {
+            border-width: 0 125px 40px 0;
+        }
+    }
 }
