--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -33,7 +33,7 @@
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 0.05em;
-    color: #d5d8dd;
+    color: #ccc;
     padding: 9px 0 0 15px;
     background: -webkit-gradient(linear, left top, right top, from(rgba(27, 31, 38, 0.65)), color-stop(60%, rgba(27, 31, 38, 0)));
     background: linear-gradient(to right, rgba(27, 31, 38, 0.65), rgba(27, 31, 38, 0) 60%);
@@ -43,27 +43,54 @@
 
 .carousel-control {
     height: 25px;
+    width: calc(100% - 40px);
+    left: 40px;
     position: absolute;
     bottom: 0;
-    right: 10px;
 }
 
-.carousel-control_dot {
+.carousel_dots {
+    width: 120px;
+    position: absolute;
+    right: 0;
+}
+
+.dot {
     display: inline-block;
-    height: 12px;
-    width: 12px;
+    height: 11px;
+    width: 11px;
     border-radius: 50%;
-    margin-right: 20px;
-    border: solid 1px #B3B3B3;
+    margin-right: 9px;
+    background: #ccd;
+    opacity: 0.45;
+}
+
+.carousel_arrow {
+    color: #fff;
+    font-size: 32px;
+    position: absolute;
+    bottom: 37px;
+    font-weight: 600;
+    opacity: 0.45;
+
+    &.forward {
+        right: 0;
+        margin-right: 8px;
+    }
+
+    &.back {
+        left: 0;
+        margin-left: 8px;
+    }
 }
 
 
 /* -- MAKE INTERACTIVE w JS -- */
 
-.carousel-control_dot:first-of-type {
-    background: #fff;
+.dot:first-of-type {
+    opacity: 1;
 }
 
-/* .carousel-control_dot:active {
+/* .dot:active {
     background: #fff;
 } */
