--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -16,7 +16,14 @@
     width: calc(100% - 40px);
     margin-left: 40px;
     margin-bottom: -3px;
+    // animation: slide 1s forwards paused;
 }
+
+
+// @keyframes slide {
+//     100% {transform: translateX(-100%)}
+// }
+
 
 .triangle-punch-out {
     border-width: 18px 42px 0 0;
@@ -65,6 +72,10 @@
     opacity: 0.45;
 }
 
+.dot-current {
+    opacity: 1;
+}
+
 .carousel_arrow {
     color: #fff;
     font-size: 32px;
@@ -87,9 +98,9 @@
 
 /* -- MAKE INTERACTIVE w JS -- */
 
-.dot:first-of-type {
-    opacity: 1;
-}
+// .dot:first-of-type {
+//     opacity: 1;
+// }
 
 /* .dot:active {
     background: #fff;
