new pics in image slider, script moved to file

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,8 +13,9 @@
                         alt="Laboratory text logo">
                     {{ partial "nav" . }}
                 </div>
-                <div class="tagline">interactive, digital, performance art</div>
+                
                 {{ partial "image-slider" . }}
+                <div class="tagline">interactive, digital, performance art</div>
                 <div class="triangle triangle-punch-out"></div>
             </header>
             
@@ -75,6 +76,7 @@
     </div>
 
     <script src="/js/scrollToTop.js" async defer></script>
+    <script src="/js/imageCarousel.js" async defer></script>
     <!-- <script src="/js/mobileNav.js" async defer></script> -->
 </body>
 
