--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -12,17 +12,16 @@
 
 /* ===== HEADER ===== */
 
-.header_image-home {
+.slide-pic {
     width: calc(100% - 40px);
     margin-left: 40px;
     margin-bottom: -3px;
-    // animation: slide 1s forwards paused;
+    display: none;
 }
 
-
-// @keyframes slide {
-//     100% {transform: translateX(-100%)}
-// }
+.home-pic {
+    display: block;
+}
 
 
 .triangle-punch-out {
@@ -36,24 +35,30 @@
     left: 40px;
     bottom: 0;
     height: 32px;
-    width: calc(100% - 40px);
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 0.05em;
     color: #ccc;
     padding: 9px 0 0 15px;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(27, 31, 38, 0.65)), color-stop(60%, rgba(27, 31, 38, 0)));
-    background: linear-gradient(to right, rgba(27, 31, 38, 0.65), rgba(27, 31, 38, 0) 60%);
     text-transform: uppercase;
     border-top: solid 1px rgba(179, 176, 171, 0.3);
 }
 
+.carousel {
+    overflow: hidden;
+    max-height: 600px;
+    width: 100%;
+}
+
 .carousel-control {
-    height: 25px;
+    height: 28px;
+    padding-top: 3px;
     width: calc(100% - 40px);
     left: 40px;
     position: absolute;
     bottom: 0;
+    background: -webkit-gradient(linear, left top, right top, from(rgba(27, 31, 38, 0.65)), color-stop(60%, rgba(27, 31, 38, 0)));
+    background: linear-gradient(to right, rgba(27, 31, 38, 0.65), rgba(27, 31, 38, 0));
 }
 
 .carousel_dots {
@@ -68,8 +73,8 @@
     width: 11px;
     border-radius: 50%;
     margin-right: 9px;
-    background: #ccd;
-    opacity: 0.45;
+    background: #dde;
+    opacity: 0.4;
 }
 
 .dot-current {
