--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,12 @@
 <header class="header">
-    <div class="header_nav-logo-container"><a href="/"><img class="header_logo" src="/images/Laboratory-Logo-WHITE.png" alt="Laboratory text logo"></a>
+    <div class="header_nav-logo-container"><a href="/"><img class="header_logo" src="/images/Laboratory-Logo-WHITE.png"
+                alt="Laboratory text logo"></a>
         {{ partial "nav" . }}
     </div>
 
     <div class="header_image-holder {{ if .Params.listType }}{{.Params.listType}}{{end}}">
-        <footer>
-            <div class="tagline">interactive, digital, performance art</div>
-        </footer>
+    <div class="carousel-control"></div>
+    <div class="tagline">interactive, digital, performance art</div>
     </div>
     <div class="triangle triangle-punch-out tpo_pages"></div>
 
